03.business-os/AICompanyManager/900.meta/worker_runtime_payload_display_20260501_103822/100_patch.out
file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/worker_runtime_payload_display_20260501_103822/100_worker_runtime_payload_display.mjs:24
  const re = new RegExp('(?:async\\\\s+)?function\\\\s+' + functionName + '\\\\s*\\\\(');
             ^

SyntaxError: Invalid regular expression: /(?:async\\s+)?function\\s+renderWorkerRuntimeRequest\\s*\\(/: Unterminated group
    at new RegExp (<anonymous>)
    at findFunctionRange (file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/worker_runtime_payload_display_20260501_103822/100_worker_runtime_payload_display.mjs:24:14)
    at file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/worker_runtime_payload_display_20260501_103822/100_worker_runtime_payload_display.mjs:362:23
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.1
